배너 및 사용자 예약 검색기능 코드 보강